[package]
name = "dop_with_aco"
version = "0.1.0"
authors = ["Sebastian Ossinger <sebastian.ossinger@mail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
osmpbfreader = "0.14.0"
tera = "1"
serde = { version = "1.0", features = ["derive"] }
float-cmp = "0.8.0"