[package]
name = "dop_with_aco"
version = "0.1.0"
authors = ["Sebastian Ossinger <sebastian.ossinger@mail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
num-traits = "0.2.14"
getrandom = "0.2.2"
oorandom = "11.1.3"
osmpbfreader = "0.14.0"
tera = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
ron = "0.6.4"
float-cmp = "0.8.0"
glob = "0.3.0"
decorum = "0.3.1"
indicatif = "0.15.0"